additional css and html

--- a/index.html
+++ b/index.html
@@ -21,6 +21,14 @@
         <li>Contact Us</li>
     </ul>
     <button id="tee-time">Book A Tee Time</button>
+
+    
+    <div id="short-description">
+ <p> Nestled between the mountains of colorado, this par 72 course offers a unique opportunity to truly enjoy the moments between each shot. Experience what it is like to play on a well-manicured course that challenges you, but also offers amazing views. Gives a call or use our website to book a tee time today!
+ 
+ </p>
+
+    </div>
     <div class="card-container">
         <div class="card">
             <img id="events-image" src="pexels-salo-al-16408.jpg" alt="">
@@ -30,7 +38,7 @@
                     <li>St. Patty's Tournament: March 25th</li>
                     <li>Members Mixer: April 13th</li> 
                     <li>Driving Range Opens: April 25th</li>
-                
+                </ul>
                 </p>
             </div>
         </div>
